[package]
name = "lockup_repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
